k8s/renderer/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: renderer
  namespace: default
spec:
  selector:
    app: renderer
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
  type: ClusterIP
